# NanosFFI

./: .gitignore  .gitmodules  README.md
server/static/: CMakeLists.txt
server/static/include/nanosffi/: api.h  loader.h
server/static/src/: _signatures.h  api.cpp  binder.h  hijacker.h  loader.cpp  pattern.cpp  pattern.h
server/win/: dllmain.cpp  version.vcxproj
